# rigger

./: Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: rust.yml
examples/: gdtf_parse_collection.rs  gdtf_tree.rs  mvr_viewer.rs
src/: lib.rs  stage.rs  util.rs
src/gdtf/: attr.rs  builder.rs  description.rs  dmx.rs  geo.rs  mod.rs  model.rs  phys.rs  proto.rs  resource.rs  rev.rs  source.rs  wheel.rs
src/gdtf/bundle/: description.rs  mod.rs  resource.rs  source.rs
src/mvr/: aux.rs  builder.rs  geo.rs  gsd.rs  layer.rs  mod.rs  node.rs  resource.rs  source.rs
src/mvr/bundle/: description.rs  mod.rs  resource.rs  source.rs
src/mvr/resolved/: aux.rs  builder.rs  layer.rs  mod.rs
tests/: gdtf_bundle_deserialize.rs  gdtf_deserialize.rs  load_gdtf.rs  load_mvr.rs  mvr_bundle_deserialize.rs  mvr_deserialize.rs
tests/data/complete_mvr/: GeneralSceneDescription.xml
tests/data/gdtf/: Rigger@Complete@v1.gdtf
tests/data/gdtf/Rigger@Complete@v1/: description.xml
tests/data/gdtf/Rigger@Complete@v1/models/gltf/: base.glb  head.glb  pixel2.glb  pixel3.glb  yoke.glb
tests/data/mvr/: complete.mvr
tests/data/mvr/complete/: GeneralSceneDescription.xml
tests/data/mvr/empty_scene_and_user_data/: GeneralSceneDescription.xml
tests/data/mvr/empty_scene_data/: GeneralSceneDescription.xml
