[package]
name = "rigger"
description = "A Rust library for reading MVR and GDTF files."
version = "0.1.0"
authors = ["Bauke Westendorp <baukewestendorp@gmail.com>"]
edition = "2024"

[dependencies]
glam = "0.32.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
unicode-normalization = "0.1.25"
uuid = { version = "1.23.0", features = ["v4"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
